Tray menu done. Won't be touched. ...For now.